--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
+black==23.10.0
 category-encoders==2.6.2
+click==8.1.7
+colorama==0.4.6
 joblib==1.3.2
+mypy-extensions==1.0.0
 numpy==1.26.1
 packaging==23.2
 pandas==2.1.1
+pathspec==0.11.2
 patsy==0.5.3
+platformdirs==3.11.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
 scikit-learn==1.3.1
@@ -11,4 +17,6 @@ scipy==1.11.3
 six==1.16.0
 statsmodels==0.14.0
 threadpoolctl==3.2.0
+tomli==2.0.1
+typing_extensions==4.8.0
 tzdata==2023.3
